# lstmburn-sw8

./: .gitignore  Cargo.toml
src/: data.rs  inference.rs  main.rs  model.rs  training.rs
