[package]
name = "lstmburn-sw8"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "~0.16", default-features = false, features = ["wgpu", "train", "metrics"] }
csv = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = {version = "0.3.2", default-features = false, features = ["wasm_js"]}

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']